# rustic-viewer

./: LICENSE  README.md  biome.json  eslint.config.js  index.html  jest.config.cjs  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/: App.tsx  constants.ts  imageWorker.ts  index.css  jest.setup.ts  store.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: args.rs  decode_image.rs  image.rs  lib.rs  main.rs  startup_state.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/__mocks__/: fileMock.ts  styleMock.ts
src/__tests__/: imageDecoder.test.ts  store.test.ts
src/components/: ComparisonView.tsx  ContextMenu.tsx  ErrorToast.tsx  ImageCanvas.tsx  ImageViewer.tsx  SingleView.tsx  SlotCanvas.tsx  TabBar.tsx  TabContextMenu.tsx  ToastNotification.tsx  ViewerControls.tsx  ViewerHeader.tsx
src/components/ComparisonView/: ComparisonView.tsx  SlotComponent.tsx  index.tsx
src/components/ImageCanvas/: index.tsx
src/components/TabBar/: TabItem.tsx  (+4 more)
src/hooks/: useImageBitmap.ts  useImageNavigation.ts  useImageViewer.ts  useTabHotkeysUndoRedo.ts  useTabMove.ts  useTabSelection.ts  useViewHotkeys.ts
src/new-store/: index.ts  types.ts
src/selectors/: selectVerticalTabs.ts
src/store/: constants.ts  errorToastStore.ts  guards.ts  index.ts  persistedSession.ts  selectors.ts  toastStore.ts  types.ts
src/utils/: fileUtils.test.ts  fileUtils.ts  imageCache.ts  imageDecoder.ts  imageLoader.ts  imagePerfMonitor.ts  layoutUtils.ts  tabHelpers.ts
(+32 files in other folders)
