[package]
name = "src-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
js-sys = "0.3.81"
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
